Fix travel advice  map images in IE6 & on mobile

--- a/app/assets/stylesheets/core.scss
+++ b/app/assets/stylesheets/core.scss
@@ -622,7 +622,7 @@ article {
   }
 }
 
-#wrapper.guide
+#wrapper.guide,
 #wrapper.programme{
   article{
     .inner{
@@ -632,6 +632,17 @@ article {
         padding-right: 1em;
       }
     }
+  }
+}
+
+#wrapper.travel-advice p img {
+  @include ie(6) {
+    display: block;
+    margin: 0 -1em;
+    padding-left: 1em;
+  }
+  @include media(mobile) {
+    width: 100%;
   }
 }
 
